style.css
@font-face {
  font-family: 'Berkeley Mono';
  src: url('/font/BerkeleyMono-Regular.woff2') format('woff2');
  font-weight: 400;
  font-style: normal;
  font-display: block;
}

@font-face {
  font-family: 'Berkeley Mono';
  src: url('/font/BerkeleyMono-Bold.woff2') format('woff2');
  font-weight: 700;
  font-style: normal;
  font-display: block;
}

@font-face {
  font-family: 'Berkeley Mono';
  src: url('/font/BerkeleyMono-Oblique.woff2') format('woff2');
  font-weight: 400;
  font-style: oblique;
  font-display: block;
}

@font-face {
  font-family: 'Berkeley Mono';
  src: url('/font/BerkeleyMono-Bold-Oblique.woff2') format('woff2');
  font-weight: 700;
  font-style: oblique;
  font-display: block;
}

